--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "6.*",
+        "laravel/helpers": "^1.2",
+        "laravel/passport": "^9.3",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
